--- a/package.json
+++ b/package.json
@@ -30,5 +30,13 @@
 	"devDependencies": {
 		"vscode": "^1.1.25",
 		"standard": "^8.6.0"
-	}
+	},
+	"homepage": "https://github.com/estn/smart-end-statement",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/estn/smart-end-statement"
+  },
+  "bugs": {
+    "url": "https://github.com/estn/smart-end-statement/issues"
+  }
 }
